fix: corrected some alignment issues and name issue of button was solved

--- a/footer/footer.css
+++ b/footer/footer.css
@@ -10,7 +10,7 @@ footer-main-container{
   padding: 300px 5px 130px 15px;
   display: block;
   align-items: center;
-  margin-top: 378px;
+  margin-top: 480px;
 }
 .footer-top-container {
   width: 80%;
