--- a/newsletter/newsletter.css
+++ b/newsletter/newsletter.css
@@ -11,6 +11,7 @@
   width: 91%;
   margin-left: 5%;
   position: relative;
+  margin-top: 11%;
   /* margin-right: 5%; */
   height: 232px;
   background-color: #ffffff;
