--- a/topbar/top_head.css
+++ b/topbar/top_head.css
@@ -133,7 +133,7 @@ select{
 
 .form .row2{
     display: flex;
-    padding: 20px 0px 20px 20px;
+    padding: 20px 20px 20px 20px;
     /* width: 100%; */
     /* margin-left: 13px; */
     justify-content: space-between;
